tests/machine/x/c/list_assign.error
line: 0
error: cc error: exit status 1
/workspace/mochi/tests/machine/x/c/list_assign.c: In function ‘main’:
/workspace/mochi/tests/machine/x/c/list_assign.c:23:7: error: subscripted value is neither array nor pointer nor vector
   23 |   nums[1] = 3;
      |       ^

   1: // Generated by Mochi compiler v0.10.25 on 2025-07-14T03:19:51Z
