tests/machine/x/c/list_assign.c
// Generated by Mochi compiler v0.10.25 on 2025-07-14T03:19:51Z
#include <stdio.h>
#include <stdlib.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
int main() {
  list_int nums = list_int_create(2);
  nums.data[0] = 1;
  nums.data[1] = 2;
  nums[1] = 3;
  printf("%d\n", nums.data[1]);
  return 0;
}
